ZOOKEEPER-3364: Compile with strict options in order to check code quality
This is the port of ZOOKEEPER-3364 to branch-3.5

- Add extra compiler arguments in order to achieve better code quality.
- Fix some minor issues reported by javac
- Extra checks are not enabled in "contrib" module.

Author: Enrico Olivelli <eolivelliapache.org>

Reviewers: andorapache.org

Closes #910 from eolivelli/fix/ZOOKEEPER-3364-javac-strict and squashes the following commits:

9660aff82 [Enrico Olivelli] Fix tests and fix warnings on JDK12
52895ec9d [Enrico Olivelli] ZOOKEEPER-3364 Compile with strict options in order to check code quality

Author: Enrico Olivelli <eolivelli@apache.org>

Reviewers: Andor Molnar <andor@apache.org>, Fangmin Lyu <allenlyu@fb.com>

Closes #952 from eolivelli/fix/ZOOKEEPER-3364-35